2001-07-24  Jody Goldberg <jgoldberg@home.com>

	* psiconv.m4 : Add psion macros from Frodo Looijaard <frodol@dds.nl>

2001-07-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-print-check.m4 (AM_PATH_GNOME_PRINT): 
	Correct minimal version test

2001-06-22  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	Fixed the cat of pi-version.h

2001-06-20  Havoc Pennington  <hp@redhat.com>

	* gnome.m4: fix to include the CFLAGS for extra libraries

2001-06-13  Pavel Roskin  <proski@gnu.org>

	* gnome-fileutils.m4: Always explicitly declare main() with the
	return type `int'. Don't use exit() since it may be undeclared.
	Use `return' instead.
	* gnome-pilot.m4: Likewise.
	* gperf-check.m4: Likewise.
	* linger.m4: Likewise.

2001-06-01  Peter Williams  <peterw@ximian.com>

	* autogen.sh: s,Gnome,$PKG_NAME,g

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.5 RELEASE

2001-05-24  jacob berkman  <jacob@ximian.com>

	* gnome-pthread-check.m4 (GNOME_PTHREAD_CHECK): add hp-ux specific
	check from glib

2001-05-19  Jody Goldberg <jgoldberg@home.com>

	* gnome-gettext.m4 : Add BUILD_INCLUDED_LIBINTL so that newer versions
	  work.

2001-04-16  Jaka Mocnik  <jaka@gnu.org>

	* gnome-print-check.m4: change $(cmd) to `cmd` in order to make it
	usable in non-bash bourne shells.

2001-03-01  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: quote a test and make sure incdir is always set
	so 'cat' works

2001-02-21  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-print-check.m4: Replaced the awk alchemy with sed alchemy.
	I seems to work now as long as gnome-config is working - but that is
	the whole point of gnome-config, isn't it?

2001-02-19  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: Revert my previous patch now that gnome-pim and
	evolution are fixed to accomodate the change
	
2001-02-19  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: AC_SUBST the PISOCK_LIBDIR var

2001-02-17  Lauris Kaplinski  <lauris@ximian.com>
